# CLIP4IDC

./: .gitignore  README.md  main_task_caption.py  main_task_retrieval.py  pyproject.toml  siglip_main_task_retrieval.py
dataloaders/: levircc_caption_loader.py  levircc_retrieval_loader.py
metrics/: metrics.py
modules/: beam.py  file_utils.py  modeling.py  modeling_siglip.py  module_clip.py  module_cross.py  module_decoder.py  optimization.py  tokenization_clip.py  until_config.py  until_module.py
modules/cross-base/: cross_config.json
modules/decoder-base/: decoder_config.json
modules/siglip/: modeling_siglip_txt.py  modeling_siglip_view.py  module_siglip.py
scripts/: caption_levircc.bat  retrieval_levircc.bat  siglip_retrieval.bat
utils/: utils.py
